k8s-product-ass/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product-api-production
  name: product-api-production-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api-production-pod
  template:
    metadata:
      labels:
        app: product-api-production-pod
    spec:
      containers:
      - name: product-api-production-pod-container
        resources: {}
        image: feljimgon3/dos-product-ass-product-atlas:v1
        ports:
        - containerPort: 8080
      restartPolicy: Always
