k8s-product-ass/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-api
  name: product-api-service
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 31503
    targetPort: 8080
  selector:
    app: product-api-production-pod
  type: NodePort
